# FRAUDX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_SYSTEME.md  app.py  app_streamlit.py  benchmark.py  dashboard.html  docker-compose.yml  generate_figures.py  pyproject.toml  requirements.txt  retrain.py  setup.py  simulate_stream.py  train.py
.github/workflows/: ci.yml  retrain.yml
.streamlit/: config.toml
MEMOIRE/: PLAN_MEMOIRE_FRAUDX.md  PROMPT_MAITRE_CODEX.md  RESSOURCES_BIBLIOGRAPHIQUES.md  architecture.html  bibliographie.md  memoire_ch1.md  memoire_ch2.md  memoire_ch3.md  memoire_ch4.md  memoire_complet.md  memoire_conclusion.md  preliminaires.md
config/: requirements.txt
data/: README.md
data/outputs/: benchmark_resultats.csv  benchmark_table.tex  shap_top10_variables.csv
entretiens/: GRILLE_ENTRETIEN_ANNEXE_A.md  MODELE_EMAIL_CONTACT.md
fraudx/: __init__.py  cli.py  config.py  db.py  metrics.py  preprocessing.py  synthetic_data.py
models_optuna/: best_params.pkl  isolation_forest.pkl  metrics.json  num_cols.json  ohe_encoder.pkl  top_features.json  xgb_model.pkl
notebooks/: 01_EDA.ipynb  02_Pretraitement.ipynb  03_IsolationForest.ipynb  04_XGBoost.ipynb  05_SHAP.ipynb  06_API_PoC.ipynb  07_Synthetique_Togo.ipynb  FRAUDX_Pipeline_Complet.py  run_pipeline.py
reports/benchmark_20260623_071426/: metrics_comparison.csv  metrics_comparison_latex.txt  summary.json
src/: api.py  utils.py
tests/: __init__.py  test_api.py  test_e2e.py  test_integration.py  test_preprocessing.py
